k8s/test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: habit-tracker-ingress-test
  namespace: habit-tracker-test
spec:
  ingressClassName: nginx
  rules:
    - host: grits.test.habittracker.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: habit-tracker-test
                port:
                  number: 8080
