k8s/test/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
  namespace: habit-tracker-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:7-alpine
          ports:
            - containerPort: 6379
          env:
            - name: REDIS_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: habit-tracker-test-secrets
                  key: redis-password
          args:
            - "redis-server"
            - "--requirepass"
            - "$(REDIS_PASSWORD)"
          volumeMounts:
            - name: redis-storage
              mountPath: /data
      volumes:
        - name: redis-storage
          emptyDir: {}


---
apiVersion: v1
kind: Service
metadata:
  name: redis-test-service
  namespace: habit-tracker-test
spec:
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
